--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@capacitor/app": "1.0.7",
     "@capacitor/core": "3.3.4",
     "@capacitor/haptics": "1.1.3",
@@ -10,6 +11,7 @@
     "@capacitor/status-bar": "1.0.6",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -19,12 +21,16 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "graphql": "^16.2.0",
     "ionicons": "^5.4.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -65,7 +71,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.3.4"
+    "@capacitor/cli": "3.3.4",
+    "@types/redux-logger": "^3.0.9"
   },
   "description": "An Ionic project"
 }
