--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@capacitor/app": "1.0.7",
-    "@capacitor/core": "3.3.4",
+    "@capacitor/core": "^3.3.4",
     "@capacitor/haptics": "1.1.3",
+    "@capacitor/ios": "3.3.4",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/react": "^6.0.0",
@@ -71,7 +72,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.3.4",
+    "@capacitor/cli": "^3.3.4",
     "@types/redux-logger": "^3.0.9"
   },
   "description": "An Ionic project"
