--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.7",
+    "@awesome-cordova-plugins/barcode-scanner": "^5.37.3",
+    "@awesome-cordova-plugins/core": "^5.37.3",
+    "@capacitor-community/facebook-login": "^3.2.0",
+    "@capacitor/android": "3.3.4",
     "@capacitor/app": "1.0.7",
     "@capacitor/core": "^3.3.4",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/ios": "3.3.4",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@reduxjs/toolkit": "^1.7.1",
@@ -25,6 +30,7 @@
     "graphql": "^16.2.0",
     "ionicons": "^5.4.0",
     "moment": "^2.29.1",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
